force-app/main/default/objects/Candidate__c/fields/Linked_In__c.field-meta.xml
<CustomField>
    <fullName>Linked_In__c</fullName>
    <formula>HYPERLINK(
  Linkedin_URL__c,
  IMAGE(&quot;/resource/LinkedInIcon&quot;, &quot;LinkedIn&quot;, 20, 20),
  &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked In</label>
    <type>Text</type>
</CustomField>