force-app/main/default/objects/Candidate__c/fields/Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Profile__c</fullName>
    <label>Linkedin Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>