force-app/main/default/objects/Candidate__c/fields/Recruiter_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>