force-app/main/default/objects/Candidate__c/validationRules/Prevent_Special_Chars_for_Candidate_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Special_Chars_for_Candidate_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( First_Name__c ,&quot;^[a-zA-Z]+$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Name can only contain letters and spaces</errorMessage>
</ValidationRule>