force-app/main/default/objects/Candidate__c/validationRules/Years_of_exp_must_be_a_whole_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Years_of_exp_must_be_a_whole_number</fullName>
    <active>true</active>
    <errorConditionFormula>MOD( Years_of_Experience__c ,1) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Years_of_Experience__c</errorDisplayField>
    <errorMessage>Years of Experience must be a whole number (e.g., 1, 2, 3)</errorMessage>
</ValidationRule>